objects/Related_Content__c.object
<CustomObject>
    <description>Content a member has saved.  CR-4798</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Content</relationshipLabel>
        <relationshipName>Related_Content</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Related Content</relationshipLabel>
        <relationshipName>Related_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microsite_ID__c</fullName>
        <label>Microsite ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Presentation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Content_ID__c</fullName>
        <label>Related Content ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Related Content</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Related Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>